[FIX] Fix the safe area on iOS

--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -3,14 +3,9 @@
   overflow: hidden;
 }
 
-h1 {
-  //font-size: 34pt;
-}
 .dashboard-title {
   margin: 20pt;
 }
-
-
 
 ion-card-title {
   font-size: 15pt;
